# borrowser

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  ROADMAP.md  TODO.txt  rustfmt.toml
crates/browser/: Cargo.toml
crates/browser/src/: app.rs  document_style.rs  dom_store.rs  egui_host.rs  form_controls.rs  input_state.rs  input_store.rs  interactions.rs  lib.rs  main.rs  page.rs  renderer.rs  rendering.rs  resources.rs  shell.rs  tab.rs  view.rs
crates/browser/src/dom_store/: arena.rs  document.rs  error.rs  materialize.rs  mod.rs  store.rs  tests.rs
crates/browser/src/form_controls/: dom.rs  index.rs  input_type.rs  mod.rs  seed.rs  tests.rs
crates/browser/src/page/: debug.rs  mod.rs  restyle.rs  retained_render_state.rs  style_cache.rs  style_phase.rs  stylesheets.rs
crates/browser/src/rendering/: contracts.rs  debug.rs  frame.rs  identity.rs  invalidation.rs  lifecycle.rs  mod.rs  page_background.rs  types.rs  work_plan.rs
crates/browser/tests/: patch_parity.rs  patch_stream_parity.rs
crates/css/: Cargo.toml  README.md
crates/css/benches/: css_bench.rs
crates/css/src/: cascade.rs  computed.rs  fuzz_regressions.rs  fuzz_support.rs  lib.rs  perf_fixtures.rs  perf_guards_heavy.rs  perf_guards_smoke.rs  properties.rs  specified.rs  syntax.rs  values.rs
crates/css/tests/: alloc_guards.rs  computed_golden.rs  css_fuzz_regressions.rs  declaration_pipeline_golden.rs  model_cutover.rs  model_golden.rs  property_registry_golden.rs  representative_pages.rs  selector_golden.rs  syntax_golden.rs
crates/gfx/: Cargo.toml
crates/gfx/src/: dom.rs  lib.rs  paint.rs  text_control.rs  text_measurer.rs  viewport.rs
crates/html/: Cargo.toml  README.md
crates/html/benches/: html_bench.rs
crates/html/data/: README.md
crates/html/src/: attributes.rs  chunker.rs  collect.rs  debug.rs  document_mode.rs  dom_builder.rs  dom_diff.rs  dom_patch.rs  dom_snapshot.rs  dom_utils.rs  entities.rs  entities_html5.rs  golden_corpus.rs  head.rs  lib.rs  names.rs  parse_guards.rs  parser.rs  perf_fixtures.rs  perf_guards_heavy.rs  perf_guards_smoke.rs  processing_instruction.rs  streaming_parity.rs  test_harness.rs  test_utils.rs  tokenizer.rs  traverse.rs  types.rs
crates/html/tests/: ae11_foreign_content.rs  ae11_provenance.rs  ae12_provenance.rs  alloc_guards.rs  api_boundary.rs  diff_html5.rs  html5_core_v0_acceptance.rs  html5_golden_tokenizer.rs  html5_golden_tree_builder.rs  html5_golden_tree_builder_patches.rs  html5_parser_conformance.rs  html5_pipeline_regressions.rs  html5_rawtext_script_regressions.rs  html5_script_regressions.rs  html5_smoke_real_pages.rs  parity_contract.rs  token_snapshot.rs  wpt_html5.rs  wpt_html5_formatting.rs  wpt_html5_select.rs  wpt_html5_tables.rs  wpt_html5_templates.rs  wpt_html5_tokenizer.rs  wpt_html5_tree_builder.rs  wpt_manifest.rs  wpt_rawtext_script.rs  wpt_runner.rs
crates/html/tools/: generate_entities_html5.py
crates/html_test_support/: Cargo.toml
crates/html_test_support/src/: lib.rs  token_snapshot.rs  tokenizer_text_mode.rs  wpt_expected.rs  wpt_formats.rs  wpt_tokenizer.rs  wpt_tree_builder.rs
crates/input_core/: Cargo.toml
crates/input_core/src/: id.rs  lib.rs  selection.rs  state.rs  store.rs  text.rs  traits.rs
crates/net/: Cargo.toml
crates/net/src/: agent.rs  content_type.rs  event.rs  fetch.rs  file.rs  lib.rs  limits.rs  log.rs  main.rs  policy.rs  stream.rs  tls.rs
crates/net/testdata/: localhost-cert.pem  localhost-key.pem  test-root-ca.pem
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/runtime_parse/: Cargo.toml
crates/runtime_parse/src/: clock.rs  config.rs  driver.rs  html5.rs  legacy.rs  lib.rs  patching.rs  policy.rs  runtime.rs  state.rs
crates/runtime_parse/tests/: perf_regression.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/css_cascade/: invalid-and-supported-mix  matching-rules  selector-limit-trigger
fuzz/corpus/css_parser/: at-rule-media  basic-stylesheet  malformed-recovery  nested-values  selector-near-miss
fuzz/corpus/css_selector_matching/: dom-reachable  sibling-axis
fuzz/corpus/css_selector_parser/: attribute-and-combinator  basic-match
fuzz/corpus/css_tokenizer/: malformed-comment  nested-functions  unterminated-string
fuzz/corpus/css_values/: color-length  malformed-function
fuzz/corpus/html5_pipeline/: basic-page  doctype-comment-text  hostile-mixed-markup  malformed-table-nesting  script-title-text-modes
fuzz/corpus/html5_tokenizer/: ampersand-storm  basic-tag  broken-comment-doctype  comment-doctype  invalid-utf8-bytes  lt-storm  malformed-doctype-public  many-attributes  nul-heavy  partial-tag-unterminated  script-lookalike
fuzz/corpus/html5_tokenizer_rawtext/: style-close-tag-near-miss  style-entity-literal-tail  style-whitespace-close
fuzz/corpus/html5_tokenizer_rcdata/: dual-close-tag-storm  entity-and-partial-tail  whitespace-close-candidates
fuzz/corpus/html5_tokenizer_script_data/: close-tag-near-miss-storm  escaped-comment-family  lt-cluster-boundary
fuzz/corpus/html5_tree_builder_tokens/: attribute-storm  doctype-comment-text  processing-instruction  stray-end-tags  table-formatting-mix
fuzz/fuzz_targets/: css_cascade.rs  css_parser.rs  css_selector_matching.rs  css_selector_parser.rs  css_tokenizer.rs  css_values.rs  html5_pipeline.rs  html5_tokenizer.rs  html5_tokenizer_rawtext.rs  html5_tokenizer_rcdata.rs  html5_tokenizer_script_data.rs  html5_tree_builder_tokens.rs
fuzz/regressions/css_cascade/: README.md
fuzz/regressions/css_parser/: README.md
fuzz/regressions/css_selector_matching/: README.md
fuzz/regressions/css_selector_parser/: README.md
fuzz/regressions/css_tokenizer/: README.md
fuzz/regressions/css_values/: README.md
fuzz/regressions/html5_pipeline/: README.md
fuzz/regressions/html5_tokenizer/: README.md
fuzz/regressions/html5_tokenizer_rawtext/: README.md
fuzz/regressions/html5_tokenizer_rcdata/: README.md
fuzz/regressions/html5_tokenizer_script_data/: README.md
fuzz/regressions/html5_tree_builder_tokens/: README.md  select-special-barrier
(+1619 files in other folders)
