[package]
name = "borrowser"
version = "0.1.0"
edition = "2021"

[dependencies]
platform = { path = "crates/platform" }

[workspace]
members = [
    "crates/platform",
    "crates/browser",
    "crates/net"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
winit = "0.30"
pollster = "0.4.0"
wgpu = "25"
egui = "0.32.3"
egui-winit = "0.32.3"
egui-wgpu = "0.32.3"
