[package]
name = "borrowser"
version = "0.1.0"
edition = "2021"

[dependencies]
browser = { path = "crates/browser" }

[workspace]
members = [
  "crates/browser",
  "crates/net",
  "crates/html",
  "crates/css",
  "crates/layout",
  "crates/gfx",
  "crates/js",
  "crates/platform",
  "crates/tools",
]
resolver = "2"

[workspace.dependencies]
winit = "0.30"
egui = "0.32"
egui-winit = "0.32"
egui-wgpu = "0.32"
pollster = "0.4"
