[package]
name = "borrowser"
version = "0.1.0"
edition = "2024"

[dependencies]
browser = { path = "crates/browser" }
mimalloc = "0.1.48"
platform = { path = "crates/platform" }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1

[workspace]
members = [
  "crates/html_test_support",
  "crates/app_api",
  "crates/browser",
  "crates/net",
  "crates/html",
  "crates/css",
  "crates/layout",
  "crates/gfx",
  "crates/js",
  "crates/platform",
  "crates/tools", 
  "crates/runtime_net", 
  "crates/runtime_parse", 
  "crates/runtime_css", 
  "crates/core_types",
  "crates/bus",
  "crates/input_core",
]
resolver = "2"

[workspace.dependencies]
winit = "0.30"
egui = "0.32"
egui-winit = "0.32"
egui-wgpu = "0.32"
pollster = "0.4"
url = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls-native-roots"] }
ureq = { version = "2", features = ["json", "charset", "gzip"] }
