[package]
name = "borrowser-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.html]
path = "../crates/html"
features = ["html5", "html5-fuzzing", "parser_invariants"]

[[bin]]
name = "html5_tokenizer"
path = "fuzz_targets/html5_tokenizer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "html5_tree_builder_tokens"
path = "fuzz_targets/html5_tree_builder_tokens.rs"
test = false
doc = false
bench = false

[[bin]]
name = "html5_pipeline"
path = "fuzz_targets/html5_pipeline.rs"
test = false
doc = false
bench = false
