[package]
name = "browser"
version = "0.1.0"
edition = "2024"

[dependencies]
app_api = { path = "../app_api" }
bus = { path = "../bus" }
net = { path = "../net" }
html = { path = "../html", features = ["internal-api"] }
css = { path = "../css" }
core_types = { path = "../core_types" }
tools = { path = "../tools" }
layout = { path = "../layout" }
gfx = { path = "../gfx" }
input_core = { path = "../input_core" }

egui = { workspace = true }
url = { workspace = true }
image = { workspace = true }

[dev-dependencies]
html = { path = "../html", features = ["dom-snapshot", "test-harness"] }
