[package]
name = "css"
version = "0.1.0"
edition = "2024"

[features]
default = []
css-fuzzing = []

[[bin]]
name = "css_fuzz_regression_summary"
path = "src/bin/css_fuzz_regression_summary.rs"
required-features = ["css-fuzzing"]

[dependencies]
html = { path = "../html", features = ["internal-api"] }

url = { workspace = true }
