[package]
name = "gfx"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
egui-wgpu = { workspace = true }
pollster = { workspace = true }
css = { path = "../css" }
layout = { path = "../layout" }
core_types = { path = "../core_types" }
html = { path = "../html" }
input_core = { path = "../input_core" }
url = { workspace = true }
