[package]
name = "html"
version = "0.1.0"
edition = "2024"

[dependencies]
memchr = "2"
tools = { path = "../tools" }

[dev-dependencies]
criterion = "0.5"

[features]
debug-stats = []
count-alloc = []
html5-entities = []
html5-parse = []
perf-tests = []
internal-api = []
dom-snapshot = []
test-harness = []
parse-guards = []

[[bench]]
name = "html_bench"
harness = false
