[package]
name = "html"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
memchr = "2"
tools = { path = "../tools" }

[dev-dependencies]
criterion = "0.5"
html-test-support = { path = "../html_test_support", features = ["html5"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[features]
debug-stats = []
count-alloc = []
html5-entities = []
html5 = []
perf-tests = []
internal-api = []
dom-snapshot = []
test-harness = []
parse-guards = []

[[bench]]
name = "html_bench"
harness = false

[[test]]
name = "wpt_html5"
path = "tests/wpt_html5.rs"
required-features = ["html5", "dom-snapshot"]

[[test]]
name = "wpt_html5_tokenizer"
path = "tests/wpt_html5_tokenizer.rs"
required-features = ["html5"]

[[test]]
name = "diff_html5"
path = "tests/diff_html5.rs"
required-features = ["html5", "dom-snapshot"]
