[package]
name = "html-test-support"
version = "0.1.0"
edition = "2024"

[features]
default = []
html5 = ["dep:html", "html/html5"]
dom-snapshot = ["html5", "html/dom-snapshot"]
parser-fixtures = ["html5", "html/parser-conformance", "dep:ring"]

[dependencies]
html = { path = "../html", default-features = false, optional = true }
ring = { version = "0.17.14", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[dev-dependencies]
tempfile = "3"

[lib]
name = "html_test_support"
path = "src/lib.rs"
