[package]
name = "net"
version = "0.1.0"
edition = "2024"

[dependencies]
tools = { path = "../tools" }
core_types = { path = "../core_types" }

ureq = { workspace = true }
rustls = { version = "0.23.32", default-features = false, features = ["std", "ring", "tls12"] }
rustls-native-certs = "0.8.1"

[dev-dependencies]
rustls-pemfile = "2"
