[package]
name = "platform"
version = "0.1.0"
edition = "2024"

[dependencies]
gfx = { path = "../gfx" }
app_api = { path = "../app_api" }
net = { path = "../net" }
html = { path = "../html", features = ["internal-api"] }
core_types = { path = "../core_types" }
bus = { path = "../bus" }
runtime_css = { path = "../runtime_css" }
runtime_net = { path = "../runtime_net" }
runtime_parse = { path = "../runtime_parse" }

winit = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
egui-wgpu = { workspace = true }
pollster = { workspace = true }
