[package]
name = "runtime_parse"
version = "0.1.0"
edition = "2024"

[dependencies]
bus = { path = "../bus" }
html = { path = "../html", features = ["internal-api"] }
core_types = { path = "../core_types" }
tools = { path = "../tools" }
log = "0.4"

[features]
patch-stats = []
html5 = ["html/html5"]

[dev-dependencies]
html = { path = "../html", features = ["internal-api", "parse-guards"] }
